# kata_machine

./: .gitignore  Cargo.toml  README.md  session.json
src/: file_utils.rs  lib.rs  main.rs
src/languages/: csharp.rs  mod.rs  rust.rs  typescript.rs
src/languages/csharp/: commands.rs  generation.rs
src/languages/rust/: commands.rs  generation.rs
src/languages/typescript/: commands.rs  generation.rs  mod.rs
