[package]
name = "kata_machine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A quick way to generate a sandbox, start coding and easily test your katas across multiple languages"
homepage = "https://github.com/poochy442/kata_machine"
repository = "https://github.com/poochy442/kata_machine"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kata_machine"
path = "src/main.rs"
